<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" tools:context="me.vkonov.testone.AllProducts">
    <item android:id="@+id/action_settings" android:title="@string/action_settings"
        android:orderInCategory="100" app:showAsAction="never" />
    <item
        android:id="@+id/searchAction"
        android:title="@string/lblSearch"

        android:icon="@android:drawable/ic_menu_search"
        android:actionViewClass="android.widget.SearchView"
        app:showAsAction="collapseActionView|ifRoom"
        android:orderInCategory="1"
        />

    <item
        android:title="@string/lblCancel"
        android:id="@+id/clear"
        android:icon="@android:drawable/ic_notification_clear_all"
        app:showAsAction="collapseActionView|ifRoom"
        />

</menu>
